@@ -1,3 +1,13 @@
+2010-02-03  Kevin Watters  <kevinwatters@gmail.com>
+
+        Reviewed by Kevin Ollivier.
+
+        [wx] Enable JIT compilation for wx.
+        
+        https://bugs.webkit.org/show_bug.cgi?id=34536
+
+        * wtf/Platform.h:
+
 2010-02-02  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Geoffrey Garen.
